# SimilarMovies_Exercise

./: README.md  SimilarMovies.ipynb  pyproject.toml
