[tool.poetry]
name = "similarmovies"
version = "0.1.0"
description = ""
authors = ["Ana Paula Januário <ferrari.januario@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.2"
notebook = "^7.2.2"
ipykernel = "^6.29.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
